# mimetypes-extension

./: README.md  pyproject.toml
mime_ext/: core.py
